# shunkakinoki

./: .depcheckrc.yml  .editorconfig  .eslintrc.json  .gitbook.yaml  .gitignore  .mergify.yml  .prettierrc.json  .releaserc.json  .tmuxinator.yml  ABOUT.md  CAUSE.md  CHANGELOG.md  CPPLINT.cfg  CREDITS.md  Cargo.toml  Dockerfile  LABEL.md  LICENSE  MISSION.md  Makefile  Pipfile  README.md  TOKEN.md  VALUE.md  VALUES.md  fly.toml  gatsby-config.js  package.json  resume.sh  resume.tex  script.sh  semicolon_delimited_script  stdc++.h  style.rb  tox.ini  tsconfig.json
.dependabot/: config.yml
.devcontainer/: docker-compose.yml
.github/: .kodiak.toml  auto_assign-issues.yml  auto_assign.yml  dependabot.yml
.github/workflows/: auto-approve.yml  check.yml  cpp.yml  deploy.yml  fly.yml  issue.yml  main.yml  markdown.yml  notion.yml  release.yml  resume.yml  ruby.yml  rust.yml  secrets.yml  stale.yml  yarn.yml
.mergify/: config.yml
about/en/: ABOUT.md
about/ja/: ABOUT.md
about/zh/: ABOUT.md
blog/en/: SUMMARY.md  clear.md  courage.md
blog/ja/: 300.md  SUMMARY.md  resourcefulness.md
blog/zh/: 300.md
pioneer/: README.md  SUMMARY.md
pitch/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md  036.md  037.md  038.md  039.md  040.md  (+93 more)
scripts/: notion2md.sh
shunkakinoki/: main.rs
src/: README.md  main.rs
wiki/: Home.md
(+273 files in other folders)
