[package]
name = "shunkakinoki"
version ="4.30.3"
authors = ["Shun Kakinoki <shunkakinoki@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/shunkakinoki/shunkakinoki"
description = "shunkakinoki"
autobins = false
include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "shunkakinoki"
path = "src/main.rs"

[[test]]
name = "shunkakinoki"
path = "src/tests/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
open = "2.0.1"

[dev-dependencies]
