[package]
name = "shunkakinoki"
version ="4.30.3"
authors = ["Shun Kakinoki <shunkakinoki@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/shunkakinoki/shunkakinoki"
description = "shunkakinoki"
autobins = false
include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "shunkakinoki"
path = "src/main.rs"

[[test]]
name = "shunkakinoki"
path = "src/tests/main.rs"

[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
clap = "3.1.18"
log = "0.4.17"
num_cpus = "1.0"
open = "2.1.2"

[dev-dependencies]
